[gd_scene load_steps=10 format=3 uid="uid://ctm8w6rqlukfh"]

[ext_resource type="Script" path="res://scripts/tesla_coil.gd" id="1_ypglk"]
[ext_resource type="Texture2D" uid="uid://bu5yvmjfchdht" path="res://assets/art/props/tesla(2).png" id="2_ojeqj"]
[ext_resource type="Texture2D" uid="uid://bxxp8ktt6wleb" path="res://assets/art/props/tesladamaged(1).png" id="3_oywtu"]
[ext_resource type="AudioStream" uid="uid://gc4tuoxoc5fb" path="res://assets/sounds/bug-zapper-47300.mp3" id="4_6gxf3"]
[ext_resource type="AudioStream" uid="uid://cpre416w34im1" path="res://assets/sounds/opening-metal-door-199581.mp3" id="5_f7oob"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f1tmf"]
atlas = ExtResource("2_ojeqj")
region = Rect2(0, 0, 645, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t15f"]
atlas = ExtResource("3_oywtu")
region = Rect2(0, 0, 645, 1200)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcpee"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1tmf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t15f")
}],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oemp2"]
size = Vector2(641, 1178)

[node name="Tesla_Coil" type="Node2D"]
script = ExtResource("1_ypglk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mcpee")

[node name="Area2D" type="Area2D" parent="." groups=["tesla_coil"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10.5, -12)
shape = SubResource("RectangleShape2D_oemp2")

[node name="zap_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6gxf3")
volume_db = -12.62

[node name="doors_unlocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f7oob")
volume_db = -5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
